@@ -15,5 +15,6 @@ sunuo (0.1.0) unstable; urgency=low
     Core.LocalDirectoryInfo
   * support for multiple script directories in ./local/src/, every one of
     them is built into a separate DLL
+  * log to ./var/log/console.log instead of ./Logs/Console.log
 
  --
